<resources>
    <string name="app_name">WalkSolo</string>
    <string name="title_activity_maps">Navigate Solo</string>
    <string name="permission_required_toast">Permissions Required</string>
    <string name="permission_rationale_location">Permission Rationale Location</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="distance_header">Hazard Distance Threshold</string>
    <string name="branch_distance_header">Branch Distance Threshold</string>
    <string name="hazard_header">Hazard Alert Frequency</string>
    <string name="timeout_header">Find My Device Timeout</string>
    <string name="walk_with_me">Walk With Me</string>
    <string name="navigate">Navigate</string>
    <string name="set_destination">Set Destination</string>
    <string name="around_me">Around Me</string>
    <string name="find_device">Find Device</string>
    <string name="stop_walking">Stop Walking</string>

    <!-- Distance Preferences -->
    <string-array name="pref_distance">
        <item>0.5m</item>
        <item>1m</item>
        <item>1.5m</item>
        <item>2m</item>
    </string-array>
    <string-array name="pref_distance_values">
        <item>50</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
    </string-array>
    <!-- Branch Distance Preferences -->
    <string-array name="pref_branch_distance">
        <item>0.5m</item>
        <item>1m</item>
        <item>2m</item>
        <item>3m</item>
    </string-array>
    <string-array name="pref_branch_distance_values">
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
    </string-array>

    <!-- Hazard Preferences -->
    <string-array name="pref_hazard_frequency">
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>45 seconds</item>
        <item>1 minute</item>
        <item>1 minute 30 seconds</item>
    </string-array>
    <string-array name="pref_frequency">
        <item>5</item>
        <item>10</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>90</item>
    </string-array>

    <!-- Timeout Preferences -->
    <string-array name="pref_how_long_timeout">
        <item>20 seconds</item>
        <item>40 seconds</item>
        <item>60 seconds</item>
        <item>2 minutes</item>
    </string-array>
    <string-array name="pref_duration">
        <item>20</item>
        <item>40</item>
        <item>60</item>
        <item>120</item>
    </string-array>
</resources>