<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <include
        layout="@layout/toolbar_layout"
        />
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/around_me"
            android:layout_width="330dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dip"
            android:contentDescription="@string/around_me"
            android:text="@string/around_me"
            android:textSize="30sp" />

        <Button
            android:id="@+id/notify_me"
            android:layout_width="330dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dip"
            android:contentDescription="@string/walk_with_me"
            android:text="@string/walk_with_me"
            android:textSize="30sp" />

        <Button
            android:id="@+id/navigate"
            android:layout_width="330dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="280dip"
            android:contentDescription="@string/navigate"
            android:text="@string/navigate"
            android:textSize="30sp" />
        <Button
            android:id="@+id/set_destination"
            android:layout_width="330dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="380dip"
            android:contentDescription="@string/set_destination"
            android:text="@string/set_destination"
            android:textSize="30sp" />

        <Button
            android:id="@+id/find_device"
            android:layout_width="330dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="480dip"
            android:contentDescription="@string/find_device"
            android:text="@string/find_device"
            android:textSize="30sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>